--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,57 +23,43 @@
     }
   </style>
 
-  <form class="example-form" (ngSubmit)="onSubmit()">
-    <mat-form-field>
-      <input
-        type="text"
-        placeholder="Enter Location"
-        matInput
-        [formControl]="myControl"
-        [matAutocomplete]="auto"
-      />
-      <mat-autocomplete #auto="matAutocomplete">
-        <mat-option
-          *ngFor="let option of filteredOptions | async"
-          [value]="option"
-        >
-          {{ option.name }}
-        </mat-option>
-      </mat-autocomplete>
-      <button type="submit">Submit</button>
-    </mat-form-field>
-    <br />
-    <br />
-    <br />
-  </form>
-  <br /><br /><br /><br />
-  <div #myName></div>
+<form class="example-form" (ngSubmit)="onSubmit()">
+  <mat-form-field>
+    <input
+      type="text"
+      placeholder="Enter Location"
+      matInput
+      [formControl]="myControl"
+      [matAutocomplete]="auto"
+    />
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+        {{ option.name }}
+      </mat-option>
+    </mat-autocomplete>
+    <button type="submit">Submit</button>
+  </mat-form-field>
+  <br />
+  <br />
+  <br />
+</form>
+<br /><br /><br /><br />
+<div #myName></div>
 
-  <div *ngIf="selectedCity">
-    <h2>Previsão para {{ selectedCity.locale.name }} - {{ selectedCity.locale.state }}</h2>
-    <p>Período: {{ selectedCity.period.begin }} a {{ selectedCity.period.end }}</p>
-    <p>{{ selectedCity.weather[0].text }}</p>
-    <p>Temperatura Mínima: {{ formatTemperature(selectedCity.weather[0].temperature.min) }}</p>
-    <p>Temperatura Máxima: {{ formatTemperature(selectedCity.weather[0].temperature.max) }}</p>
-    <p>Probabilidade de Chuva: {{ selectedCity.weather[0].rain.probability }}%</p>
-    <p>Precipitação de Chuva: {{ formatRain(selectedCity.weather[0].rain.precipitation) }}</p>
-  </div>
+<div *ngIf="selectedCity">
+  <h2>Previsão para {{ selectedCity.locale.name }} - {{ selectedCity.locale.state }}</h2>
+  <p>Período: {{ selectedCity.period.begin }} a {{ selectedCity.period.end }}</p>
+  <p>{{ selectedCity.weather[0].text }}</p>
+  <p>Temperatura Mínima: {{ formatTemperature(selectedCity.weather[0].temperature.min) }}</p>
+  <p>Temperatura Máxima: {{ formatTemperature(selectedCity.weather[0].temperature.max) }}</p>
+  <p>Probabilidade de Chuva: {{ selectedCity.weather[0].rain.probability }}%</p>
+  <p>Precipitação de Chuva: {{ formatRain(selectedCity.weather[0].rain.precipitation) }}</p>
+</div>
 
-  <div>
-    <label>Unidade de Temperatura: </label>
-    <select [(ngModel)]="temperatureUnit">
-      <option value="C">Celsius</option>
-      <option value="F">Fahrenheit</option>
-    </select>
-  </div>
-  <div>
-    <label>Unidade de Chuva (Precipitação): </label>
-    <select [(ngModel)]="rainUnit">
-      <option value="mm">Milímetros</option>
-      <option value="in">Polegadas</option>
-    </select>
-  </div>
+<button (click)="changeTemperatureUnit()">{{ temperatureButtonText }}</button>
+<button (click)="changeRainUnit()">{{ rainButtonText }}</button>
 
-  <h1>Só funciona para SP e Osasco devido aos dados disponíveis</h1>
-</body>
-</html>
+<h1>Só funciona pra SP e Osasco por conta dos dados adquiridos</h1>
+
+  </body>
+  </html>
