add images and icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,20 +17,33 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="app.component.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,1700,0,200"
+<head>
+  <meta charset="utf-8">
+  <title>ClimaTempo</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="app.component.css" />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,1700,0,200"
     />
-  </head>
+</head>
   <body>
     <style>
       body {
         background-color: lightgrey;
       }
+      .logo {
+        max-width: 100px; /* Defina o tamanho máximo da imagem */
+        background-color: #4169e1;
+      }
     </style>
-
+    
+    <img src="./assets/images/logo-white.png" style="max-width: 100%;" alt="Logo ClimaTempo" class="logo" />
+    
     <form class="example-form" (ngSubmit)="onSubmit()">
       <mat-form-field>
         <input
