começa a implementar lógica do serviço de local storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
         background-color: lightgrey;
       }
     </style>
-
+    <!-- Adicionar o ícone e o nome da ClimaTempo-->
     <form class="example-form" (ngSubmit)="onSubmit()">
       <mat-form-field>
         <input
