Agora é possível consultar a cidade clicando no dropdown

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,6 +57,7 @@
           <mat-option
             *ngFor="let option of filteredOptions | async"
             [value]="option"
+            (click)="clickSubmit(option)"
           >
             {{ cityDisplayWith(option) }}
           </mat-option>
