--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,82 +7,111 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<head>
-  <link rel="stylesheet" href="app.component.css" />
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200"
-  />
-</head>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <link rel="stylesheet" href="app.component.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,1700,0,200"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,200"
     />
   </head>
-  <body>
-    <style>
-      body {
-        background-color: lightgrey;
-      }
-    </style>
-    <mat-slide-toggle
-      [(ngModel)]="temperatureUnitInCelsius"
-      (change)="changeTemperatureUnit()"
-    >
-      Exibir em Celsius</mat-slide-toggle
-    >
 
-    <mat-slide-toggle [(ngModel)]="rainUnitInPol" (change)="changeVolumeUnit()"
-      >Exibir em Polegadas</mat-slide-toggle
-    >
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="utf-8" />
+      <title>ClimaTempo</title>
+      <base href="/" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+        rel="stylesheet"
+      />
+      <link
+        href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet"
+      />
+      <link rel="stylesheet" href="app.component.css" />
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,1700,0,200"
+      />
+    </head>
+    <body>
+      <style>
+        body {
+          background-color: lightgrey;
+        }
+        .logo {
+          max-width: 100px; /* Defina o tamanho máximo da imagem */
 
-    <form class="example-form" (ngSubmit)="onSubmit()">
-      <mat-form-field [hiden]="true">
-        <input
-          type="text"
-          placeholder="Enter Location"
-          matInput
-          [formControl]="myControl"
-          [matAutocomplete]="auto"
-        />
-        <mat-autocomplete
-          #auto="matAutocomplete"
-          [displayWith]="cityDisplayWith"
-        >
-          <mat-option
-            *ngFor="let option of filteredOptions | async"
-            [value]="option"
-            (click)="clickSubmit(option)"
-          >
-            {{ cityDisplayWith(option) }}
-          </mat-option>
-        </mat-autocomplete>
-        <button type="submit">
-          <span class="material-symbols-outlined"> search </span>
-        </button>
-      </mat-form-field>
-    </form>
-
-    <!-- <button (click)="changeRainUnit()">{{ rainButtonText }}</button> -->
-    <div *ngIf="selectedCity">
-      <h2>
-        Previsão para {{ selectedCity.locale.name }} -
-        {{ selectedCity.locale.state }}
-      </h2>
-      <p>
-        Período: {{ selectedCity.period.begin }} a {{ selectedCity.period.end }}
-      </p>
-
-      <div
-        *ngFor="let entry of selectedCity.weather; let i = index"
-        class="weather-card"
+          background-color: #4169e1;
+        }
+      </style>
+      <img
+        src="./assets/images/logo-white.png"
+        style="max-width: 100%"
+        alt="Logo ClimaTempo"
+        class="logo"
+      />
+      <mat-slide-toggle
+        [(ngModel)]="temperatureUnitInCelsius"
+        (change)="changeTemperatureUnit()"
       >
-        <!-- <h3>Dia {{ i + 1 }}</h3>
+        Exibir em Celsius</mat-slide-toggle
+      >
+
+      <mat-slide-toggle
+        [(ngModel)]="rainUnitInPol"
+        (change)="changeVolumeUnit()"
+        >Exibir em Polegadas</mat-slide-toggle
+      >
+
+      <form class="example-form" (ngSubmit)="onSubmit()">
+        <mat-form-field [hiden]="true">
+          <input
+            type="text"
+            placeholder="Enter Location"
+            matInput
+            [formControl]="myControl"
+            [matAutocomplete]="auto"
+          />
+          <mat-autocomplete
+            #auto="matAutocomplete"
+            [displayWith]="cityDisplayWith"
+          >
+            <mat-option
+              *ngFor="let option of filteredOptions | async"
+              [value]="option"
+              (click)="clickSubmit(option)"
+            >
+              {{ cityDisplayWith(option) }}
+            </mat-option>
+          </mat-autocomplete>
+          <button type="submit">
+            <span class="material-symbols-outlined"> search </span>
+          </button>
+        </mat-form-field>
+      </form>
+
+      <!-- <button (click)="changeRainUnit()">{{ rainButtonText }}</button> -->
+      <div *ngIf="selectedCity">
+        <h2>
+          Previsão para {{ selectedCity.locale.name }} -
+          {{ selectedCity.locale.state }}
+        </h2>
+        <p>
+          Período: {{ selectedCity.period.begin }} a
+          {{ selectedCity.period.end }}
+        </p>
+
+        <div
+          *ngFor="let entry of selectedCity.weather; let i = index"
+          class="weather-card"
+        >
+          <!-- <h3>Dia {{ i + 1 }}</h3>
         <p>Data: {{ entry.date }}: {{ formatDate(entry) }}</p>
         <p>{{ entry.text }}</p>
         <p>
@@ -97,7 +126,7 @@
         <p>
           Precipitação de Chuva: {{ formatRain(entry, this.rainUnitInPol) }}
         </p> -->
-        <!-- <table class="weather-card">
+          <!-- <table class="weather-card">
           <tr>
             <th
               colspan="16"
@@ -134,44 +163,49 @@
             <td>-</td>
           </tr>
         </table> -->
-        <table class="rounded-table">
-          <tr>
-            <td>{{ formatDate(entry) }}</td>
-          </tr>
-          <tr>
-            <td>
-              <span class="material-symbols-outlined">
-                {{ formatProbability(entry) }}
-              </span>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <span class="material-symbols-outlined"> arrow_downward </span>
-              {{
-                formatTemperature(entry, !this.temperatureUnitInCelsius, true)
-              }}
-              |
-              {{
-                formatTemperature(entry, !this.temperatureUnitInCelsius, false)
-              }}
-              <span class="material-symbols-outlined"> arrow_upward </span>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <span class="material-symbols-outlined"> water_drop </span>
-              {{ formatRain(entry, this.rainUnitInPol) }}
-              |
-              {{ entry.rain.probability }} %
-              <span class="material-symbols-outlined"> umbrella </span>
-            </td>
-          </tr>
-          <tr>
-            <td>{{ entry.text }}</td>
-          </tr>
-        </table>
+          <table class="rounded-table">
+            <tr>
+              <td>{{ formatDate(entry) }}</td>
+            </tr>
+            <tr>
+              <td>
+                <span class="material-symbols-outlined">
+                  {{ formatProbability(entry) }}
+                </span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class="material-symbols-outlined"> arrow_downward </span>
+                {{
+                  formatTemperature(entry, !this.temperatureUnitInCelsius, true)
+                }}
+                |
+                {{
+                  formatTemperature(
+                    entry,
+                    !this.temperatureUnitInCelsius,
+                    false
+                  )
+                }}
+                <span class="material-symbols-outlined"> arrow_upward </span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class="material-symbols-outlined"> water_drop </span>
+                {{ formatRain(entry, this.rainUnitInPol) }}
+                |
+                {{ entry.rain.probability }} %
+                <span class="material-symbols-outlined"> umbrella </span>
+              </td>
+            </tr>
+            <tr>
+              <td>{{ entry.text }}</td>
+            </tr>
+          </table>
+        </div>
       </div>
-    </div>
-  </body>
+    </body>
+  </html>
 </html>
