--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,18 +6,15 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
 .weather-card {
     border: 1px solid #ccc;
     padding: 10px;
     margin: 10px;
     background-color: white;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+
+h1, h2, h3, h4, h5, h6 {
     margin: 8px 0;
 }
 
@@ -37,27 +34,15 @@ p {
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #1976d2;
+    background: #1976d2;
     color: white;
-    font-weight: 600;
 }
 
-.toolbar img {
+.toolbar img, .toolbar #twitter-logo, .toolbar #youtube-logo {
     margin: 0 16px;
 }
 
-.toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover,
-.toolbar #youtube-logo:hover {
+.toolbar #twitter-logo:hover, .toolbar #youtube-logo:hover {
     opacity: 0.8;
 }
 
@@ -79,25 +64,9 @@ svg.material-icons:not(:last-child) {
     margin-right: 8px;
 }
 
-.card svg.material-icons path {
-    fill: #888;
-}
-
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 16px;
-}
-
-.card {
-    all: unset;
+.card, .card-small, .highlight-card {
     border-radius: 4px;
     border: 1px solid #eee;
-    background-color: #fafafa;
-    height: 40px;
-    width: 200px;
-    margin: 0 8px 16px;
     padding: 16px;
     display: flex;
     flex-direction: row;
@@ -130,7 +99,7 @@ svg.material-icons:not(:last-child) {
 }
 
 .card.highlight-card {
-    background-color: #1976d2;
+    background: #1976d2;
     color: white;
     font-weight: 600;
     border: none;
@@ -158,9 +127,7 @@ svg#rocket-smoke {
     z-index: -10;
 }
 
-a,
-a:visited,
-a:hover {
+a, a:visited, a:hover {
     color: #1976d2;
     text-decoration: none;
 }
@@ -177,7 +144,7 @@ a:hover {
     padding-top: 45px;
     margin-top: 8px;
     overflow: hidden;
-    background-color: rgb(15, 15, 16);
+    background: rgb(15, 15, 16);
 }
 
 .terminal::before {
@@ -269,9 +236,7 @@ svg#clouds {
 
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
-
-    .card-container>*:not(.circle-link),
-    .terminal {
+    .card-container > *:not(.circle-link), .terminal {
         width: 100%;
     }
 
@@ -297,22 +262,21 @@ svg#clouds {
     }
 }
 
-   .rounded-table {
-       border-collapse: collapse;
-       width: 200px;
-       border: 2px solid blue;
-       border-radius: 10px;
-       margin: 20px auto;
-   }
+.rounded-table {
+    border-collapse: collapse;
+    width: 200px;
+    border: 2px solid blue;
+    border-radius: 10px;
+    margin: 20px auto;
+}
 
-   .rounded-table th,
-   .rounded-table td {
-       border: 2px solid blue;
-       padding: 10px;
-       text-align: center;
-   }
+.rounded-table th, .rounded-table td {
+    border: 2px solid blue;
+    padding: 10px;
+    text-align: center;
+}
 
-   .material-icons-outlined.md-48 {
-       font-size: 48px;
-       color: blue;
-   }
+.material-icons-outlined.md-48 {
+    font-size: 48px;
+    color: blue;
+}
