--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,64 +40,58 @@
       />
     </head>
     <body>
-      <style>
-        body {
-          background-color: lightgrey;
-        }
-        .logo {
-          max-width: 100px; /* Defina o tamanho máximo da imagem */
+      <br /><br /><br />
+      <div>
+        <img
+          src="./assets/images/logo-white.png"
+          style="max-width: 100%"
+          alt="Logo ClimaTempo"
+          class="logo"
+        />
+        <br />
+        <mat-slide-toggle
+          [(ngModel)]="temperatureUnitInCelsius"
+          (change)="changeTemperatureUnit()"
+        >
+          Exibir em Celsius</mat-slide-toggle
+        >
 
-          background-color: #4169e1;
-        }
-      </style>
-      <img
-        src="./assets/images/logo-white.png"
-        style="max-width: 100%"
-        alt="Logo ClimaTempo"
-        class="logo"
-      />
-      <mat-slide-toggle
-        [(ngModel)]="temperatureUnitInCelsius"
-        (change)="changeTemperatureUnit()"
-      >
-        Exibir em Celsius</mat-slide-toggle
-      >
+        <mat-slide-toggle
+          [(ngModel)]="rainUnitInPol"
+          (change)="changeVolumeUnit()"
+          >Exibir em Polegadas</mat-slide-toggle
+        >
 
-      <mat-slide-toggle
-        [(ngModel)]="rainUnitInPol"
-        (change)="changeVolumeUnit()"
-        >Exibir em Polegadas</mat-slide-toggle
-      >
-
-      <form class="example-form" (ngSubmit)="onSubmit()">
-        <mat-form-field [hiden]="true">
-          <input
-            type="text"
-            placeholder="Enter Location"
-            matInput
-            [formControl]="myControl"
-            [matAutocomplete]="auto"
-          />
-          <mat-autocomplete
-            #auto="matAutocomplete"
-            [displayWith]="cityDisplayWith"
-          >
-            <mat-option
-              *ngFor="let option of filteredOptions | async"
-              [value]="option"
-              (click)="clickSubmit(option)"
+        <form class="example-form" (ngSubmit)="onSubmit()">
+          <mat-form-field [hiden]="true">
+            <input
+              type="text"
+              placeholder="Enter Location"
+              matInput
+              [formControl]="myControl"
+              [matAutocomplete]="auto"
+            />
+            <mat-autocomplete
+              #auto="matAutocomplete"
+              [displayWith]="cityDisplayWith"
             >
-              {{ cityDisplayWith(option) }}
-            </mat-option>
-          </mat-autocomplete>
-          <button type="submit">
-            <span class="material-symbols-outlined"> search </span>
-          </button>
-        </mat-form-field>
-      </form>
-
+              <mat-option
+                *ngFor="let option of filteredOptions | async"
+                [value]="option"
+                (click)="clickSubmit(option)"
+              >
+                {{ cityDisplayWith(option) }}
+              </mat-option>
+            </mat-autocomplete>
+            <button type="submit">
+              <span class="material-symbols-outlined"> search </span>
+            </button>
+          </mat-form-field>
+        </form>
+      </div>
       <!-- <button (click)="changeRainUnit()">{{ rainButtonText }}</button> -->
-      <div *ngIf="selectedCity">
+
+      <div *ngIf="selectedCity" background-color="4169e1">
         <h2>
           Previsão para {{ selectedCity.locale.name }} -
           {{ selectedCity.locale.state }}
@@ -111,99 +105,43 @@
           *ngFor="let entry of selectedCity.weather; let i = index"
           class="weather-card"
         >
-          <!-- <h3>Dia {{ i + 1 }}</h3>
-        <p>Data: {{ entry.date }}: {{ formatDate(entry) }}</p>
-        <p>{{ entry.text }}</p>
-        <p>
-          Temperatura Mínima:
-          {{ formatTemperature(entry, !this.temperatureUnitInCelsius, true) }}
-        </p>
-        <p>
-          Temperatura Máxima:
-          {{ formatTemperature(entry, !this.temperatureUnitInCelsius, false) }}
-        </p>
-        <p>Probabilidade de Chuva: {{ entry.rain.probability }}%</p>
-        <p>
-          Precipitação de Chuva: {{ formatRain(entry, this.rainUnitInPol) }}
-        </p> -->
-          <!-- <table class="weather-card">
           <tr>
-            <th
-              colspan="16"
-              style="
-                background-color: white;
-                color: black;
-                font-size: 12px;
-                font-family: Arial, sans-serif;
-                text-align: left;
-              "
-            >
-              Data: {{ entry.date }}: {{ entry.text }}
-            </th>
-          </tr>
-          <tr>
-            <td>MIN</td>
-            <td>{{ entry.temperature.min }}</td>
-            <td>-</td>
-            <td>-</td>
-            <td>MAX</td>
-            <td>{{ entry.temperature.max }}</td>
-
-            <td>-</td>
-            <td>-</td>
-          </tr>
-          <tr>
-            <td>Porcentagem</td>
-            <td>{{ entry.rain.probability }}</td>
-            <td>Volume</td>
-            <td>{{ entry.rain.precipitation }}</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-          </tr>
-        </table> -->
-          <table class="rounded-table">
-            <tr>
-              <td>{{ formatDate(entry) }}</td>
-            </tr>
-            <tr>
-              <td>
+            <th rowspan="2">
+              <h1>
                 <span class="material-symbols-outlined">
                   {{ formatProbability(entry) }}
                 </span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <span class="material-symbols-outlined"> arrow_downward </span>
-                {{
-                  formatTemperature(entry, !this.temperatureUnitInCelsius, true)
-                }}
-                |
-                {{
-                  formatTemperature(
-                    entry,
-                    !this.temperatureUnitInCelsius,
-                    false
-                  )
-                }}
-                <span class="material-symbols-outlined"> arrow_upward </span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <span class="material-symbols-outlined"> water_drop </span>
-                {{ formatRain(entry, this.rainUnitInPol) }}
-                |
-                {{ entry.rain.probability }} %
-                <span class="material-symbols-outlined"> umbrella </span>
-              </td>
-            </tr>
-            <tr>
-              <td>{{ entry.text }}</td>
-            </tr>
-          </table>
+                <br />
+                {{ formatDate(entry) }}
+              </h1>
+            </th>
+            <th>
+              <span class="material-symbols-outlined"> arrow_downward </span>
+              {{
+                formatTemperature(entry, !this.temperatureUnitInCelsius, true)
+              }}
+            </th>
+            <th>
+              <span class="material-symbols-outlined"> arrow_upward </span>
+              {{
+                formatTemperature(entry, !this.temperatureUnitInCelsius, false)
+              }}
+            </th>
+          </tr>
+          <tr>
+            <th>
+              <span class="material-symbols-outlined"> umbrella</span>
+              {{ entry.rain.probability }} %
+            </th>
+            <th>
+              <span class="material-symbols-outlined"> water_drop </span>
+              {{ formatRain(entry, this.rainUnitInPol) }}
+            </th>
+          </tr>
+
+          <tr>
+            <td colspan="3">{{ entry.text }}</td>
+          </tr>
         </div>
       </div>
     </body>
