--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,7 +27,7 @@
 }
 
    body {
-    background-color: darkblue;
+    background-color: lightgray;
     padding: 0px;
     margin: 0px;
     height: 100vh;
