--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
     <body>
       <img
         src="./assets/images/logo-white.png"
-        style="max-width: 100%"
+        style="max-width: 100%;width: 100%;"
         alt="Logo ClimaTempo"
         class="logo"
       />
